[package]
name = "dirdocs"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
description = "Generate terse, one-sentence documentation for files; plus Nushell-style directory viewers (dls, dtree) that surface .dirdocs.nu descriptions."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/graves/dirdocs"
homepage = "https://github.com/graves/dirdocs"
documentation = "https://docs.rs/dirdocs"
keywords = ["documentation", "nushell", "cli", "tree", "ls"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = ["/.github", "/.gitignore", "/target", "/.vscode"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4", features = ["derive"] }
handlebars = "6.3.2"
humansize = "2.1.3"
ignore = "0.4"
lscolors = "0.13.0"
mime_guess = "2"
nu-ansi-term = "0.50.1"
nu-color-config = "0.107.0"
nu-table = "0.107"
pathdiff = "0.2.3"
regex = "1.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
terminal_size = "0.4.3"
text-splitter = { version = "0.28", default-features = false, features = ["markdown", "code", "tiktoken-rs"] }
tiktoken-rs = "0.7"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree_magic_mini = "3"
walkdir = "2.5.0"
blake3 = "1.8.2"
tabled = "0.20.0"

awful_aj = "0.3.6"

tree-sitter = "0.25" # core API used by language crates

# --- Optional Tree-sitter language crates (one per language) ---
tree-sitter-bash = { version = "*", optional = true }
tree-sitter-c = { version = "*", optional = true }
tree-sitter-cpp = { version = "*", optional = true }
tree-sitter-c-sharp = { version = "*", optional = true }
tree-sitter-css = { version = "*", optional = true }
tree-sitter-embedded-template = { version = "*", optional = true } # ERB/EJS
tree-sitter-go = { version = "*", optional = true }
tree-sitter-haskell = { version = "*", optional = true }
tree-sitter-html = { version = "*", optional = true }
tree-sitter-java = { version = "*", optional = true }
tree-sitter-javascript = { version = "*", optional = true }
tree-sitter-jsdoc = { version = "*", optional = true }
tree-sitter-json = { version = "*", optional = true }
tree-sitter-julia = { version = "*", optional = true }
tree-sitter-ocaml = { version = "*", optional = true }
tree-sitter-php = { version = "*", optional = true }
tree-sitter-python = { version = "*", optional = true }
tree-sitter-regex = { version = "*", optional = true }
tree-sitter-ruby = { version = "*", optional = true }
tree-sitter-rust = { version = "*", optional = true }
tree-sitter-scala = { version = "*", optional = true }
tree-sitter-typescript = { version = "*", optional = true }
tree-sitter-verilog = { version = "*", optional = true }

[features]
default = [
  # turn all languages on by default;
  # remove items here if you prefer opt-in per language
  "lang-bash",
  "lang-c",
  "lang-cpp",
  "lang-c-sharp",
  "lang-css",
  "lang-embedded-template",
  "lang-go",
  "lang-haskell",
  "lang-html",
  "lang-java",
  "lang-javascript",
  "lang-jsdoc",
  "lang-json",
  "lang-julia",
  "lang-ocaml",
  "lang-php",
  "lang-python",
  "lang-regex",
  "lang-ruby",
  "lang-rust",
  "lang-scala",
  "lang-typescript",
  "lang-verilog",
]

lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-css = ["dep:tree-sitter-css"]
lang-embedded-template = ["dep:tree-sitter-embedded-template"] # ERB/EJS
lang-go = ["dep:tree-sitter-go"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-html = ["dep:tree-sitter-html"]
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-jsdoc = ["dep:tree-sitter-jsdoc"]
lang-json = ["dep:tree-sitter-json"]
lang-julia = ["dep:tree-sitter-julia"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-php = ["dep:tree-sitter-php"]
lang-python = ["dep:tree-sitter-python"]
lang-regex = ["dep:tree-sitter-regex"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-scala = ["dep:tree-sitter-scala"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-verilog = ["dep:tree-sitter-verilog"]

[[bin]]
name = "dls"
path = "src/bin/dls.rs"

[[bin]]
name = "dtree"
path = "src/bin/dtree.rs"

[[bin]]
name = "dirdocs"
path = "src/main.rs"

[package.metadata.docs.rs]
# Build docs with a lean feature set
features = []
no-default-features = true
